desarrollo de fórmula encode

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,11 @@
     </header>
     <hr>
     <main>
-      <h2>Hola ¿Deseas crear un mensaje secreto o descifrarlo?
+      <h2>Bienvenido/a 
     </h2>
       <p>
-        Ingresa tu mensaje en el siguiente recuadro y luego haz click en la opción que deseas.
+        Puedes utilizar esta herramienta para crear mensajes secretos que desees compartir con tu persona de confianza.<br>
+        Ingresa tu mensaje en el siguiente recuadro y luego haz click en la opción que deseas utilizar.
       </p>
       <p><!--sección para ingresar mensaje: cifrar/descifrar-->
         <textarea id="mensaje" cols="50" rows="10" placeholder="Ingresa tu mensaje aquí"></textarea> 
@@ -25,12 +26,9 @@
         <i><small>Elige el nivel de seguridad de tu mensaje</small></i>
       </p>
 
-        <button id="cifrar"> 
-          Crear mensaje secreto
-        </button>
-        <button id="descifrar">
-          Descifrar mensaje secreto
-        </button>
+        <button id="cifrar">Crear mensaje secreto</button>
+        <button id="descifrar">Descifrar mensaje secreto</button>
+
       <p><!--resultado del mensaje: cifrado/descifrado-->
         <textarea id="resultado" cols="50" rows="10"></textarea> 
       </p>
