--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         <i><small>Elige el nivel de seguridad de tu mensaje</small></i>
       </p>
 
-        <button id="cifrar" onclick="mostarCifrado()">Crear mensaje secreto</button>
+        <button id="cifrar">Crear mensaje secreto</button>
         <button id="descifrar">Descifrar mensaje secreto</button>
 
       <p><!--resultado del mensaje: cifrado/descifrado-->
